# multi_robot_sim

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
multi_robot_sim/: CMakeLists.txt  package.xml
multi_robot_sim/install/: local_setup.sh  setup.sh
multi_robot_sim/launch/: spawn_robots.launch.py
multi_robot_sim/log/: latest_build
multi_robot_sim/models/simple_bot/: model.config  model.sdf
multi_robot_sim/scripts/: teleop_setup.sh
multi_robot_sim/worlds/: custom_world.world
