
<?xml version="1.0"?>
<package format="3">
  <name>multi_robot_sim</name>
  <version>0.0.1</version>
  <description>Multi-robot Gazebo simulation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>
